feat: add styles

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="main__education">
             <div class="main__wrapper-title">
                 <h2 class="main__title-education">EDUCATION</h2>
-                <img class="main__img" src="./assets/svg/education.svg" width="50" alt="icon education">
+                <img class="main__img img" src="./assets/svg/education.svg" width="50" alt="icon education">
             </div>
             <ul class="main__education-list">
                 <li class="main__education-type">
@@ -66,8 +66,8 @@
         </div>
         <div class="main__about-me">
             <div class="main__wrapper-title">
-                <h2 class="main__title-about-me">ABOUT ME</h2>
-                <img class="main__img_about-me" src="./assets/svg/profile.svg" width="50"  alt="icon person">
+                <h2 class="main__title">ABOUT ME</h2>
+                <img class="main__img img-white" src="./assets/svg/profile.svg" width="50"  alt="icon person">
             </div>
             <div class="main__text">
                 <span class="main__text-start">Hi, my name is Anna</span>
@@ -86,9 +86,8 @@
     </section>
 <section class="works-skills container">
 <div class="works-skills__skills">
-
     <div class="works-skills__skills-professional">
-        <div  class="works-skills__wrapper-title wrapper-title">
+        <div  class="works-skills__title-skills wrapper-title">
             <h2 class="works-skills__title wrapper-title__title-black">Skills</h2>
             <img class="works-skills__img-skills" src="./assets/svg/skills.svg" width="50" alt="icon skills">
         </div>
@@ -106,13 +105,50 @@
             <li class="works-skills__skill">GIT</li>
             <li class="works-skills__skill">Team Work</li>
         </ul> 
-    </div>
 
+
+    </div>
+    <div class="works-skills__language">
+        <div  class="works-skills__wrapper-title wrapper-title">
+            <h2 class="works-skills__title wrapper-title__title-black">Language</h2>
+            <img class="works-skills__img-skills" src="./assets/svg/language.svg" width="50" alt="icon skills">
+        </div>
+        <ul class="works-skills__list">
+            <li  class="works-skills__skill works-skills__skill_language">English (B2)</li>
+            <li  class="works-skills__skill works-skills__skill_language">Russian native</li>
+        </ul>
+
+    </div>
 </div>
 <div class="works-skills__projects">
     <div class="works-skills__wrapper-title wrapper-title">
         <h2 class="works-skills__title wrapper-title__title-white">Projects</h2>
         <img class="works-skills__img-project" src="./assets/svg/project.svg" width="50" alt="icon projects">
+    </div>
+    <div class="works-skills__wrapper-projects">
+        <ul class="works-skills__projects-list">
+            <li class="works-skills__project">
+                <h2 class="works-skills__project-title">Shelter</h2>
+                <a class="works-skills__project-link" href="https://laluna93.github.io/Shelter/dist/">
+                    <img class="works-skills__project-img" src="./assets/img/shelter320.jpg" alt="image shelter">
+                </a>
+                <h3 class="works-skills__project-text">TypeScritp, Webpack, Eslint</h3>
+            </li>
+            <li class="works-skills__project">
+                <h2 class="works-skills__project-title">Youtube</h2>
+                <a class="works-skills__project-link" href="">
+                    <img class="works-skills__project-img" src="./assets/img/youtube.jpg" alt="image youtube">
+                </a>
+                <h3 class="works-skills__project-text">Angular, TypeScritp, RXJS, NGRX, YouTube Data Api</h3>
+            </li>
+            <li class="works-skills__project">
+                <h2 class="works-skills__project-title">Project Management</h2>
+                <a class="works-skills__project-link" href="https://pomakom-rsteam.github.io/project-management-app-team2/">
+                    <img class="works-skills__project-img" src="./assets/img/project-manager.jpg" alt="image project management">
+                </a>
+                <h3 class="works-skills__project-text">Angular, TypeScritp, Angular Material, Ng-Zorro</h3>
+            </li>
+        </ul>
     </div>
 </div>
 </section>
